Edit work organization
- add model section to work organization

--- a/submit/index.html
+++ b/submit/index.html
@@ -823,10 +823,12 @@
       </p>
 
       <p>
-        The organization of this work is as follows. Firstly, we will introduce and motivate the task of table 
-        annotation in Chapter 1. Next, in Chapter 2, we will provide an overview of the preliminaries,such as CTA, CPA, and <br> Transformers. Chapter 3 will then present the related work.
-        Moving on to Chapters 4 and 5, we will delve into the experimental results and Error Analysis. Finally, in Chapters 6 and 7, 
-        we will discuss the results <br>and conclude the work, respectively.
+        This work is organized as follows. Firstly, in Chapter 1, we will introduce and motivate the task of table annotation. Furthermore, 
+        in Chapter 2, we will provide an overview of the preliminaries such as CTA, CPA, and Transformers. Subsequently, in Chapter 3, 
+        we will present the related work. Moving on to Chapter 4, we will describe the models, preprocessing steps, and serialization 
+        approaches. Additionally, in Chapter 5, we will describe the experiment setup. Then, in Chapter 6, we will delve into 
+        the experimental results and Error Analysis. Finally, in Chapters 7 and 8, we will discuss the results and conclude the work, 
+        respectively.
       </p>
       <h2>Contents</h2>
       <ul>
