Add break between references

--- a/submit/index.html
+++ b/submit/index.html
@@ -1828,34 +1828,34 @@
         [8] Wang, Z., Dong, H., Jia, R., Li, J., Fu, Z., Han, S., & Zhang, D.
         (2020). TUTA: Tree-based Transformers for Generally Structured Table
         Pre-training. Proceedings of the 27th ACM SIGKDD Conference on Knowledge
-        Discovery & Data Mining.
+        Discovery & Data Mining. <br />
 
         <span id="toc17"></span>
         [9] Chen, J., Jiménez-Ruiz, E., Horrocks, I., & Sutton, C. (2019).
-        Learning Semantic Annotations for Tabular Data. ArXiv, abs/1906.00781.
+        Learning Semantic Annotations for Tabular Data. ArXiv, abs/1906.00781. <br />
 
         <span id="toc18"></span>
         [10] Khurana, U., & Galhotra, S. (2021). Semantic Concept Annotation for
         Tabular Data. Proceedings of the 30th ACM International Conference on
-        Information & Knowledge Management.
+        Information & Knowledge Management. <br />
 
         <span id="toc19"></span>
         [11] Zhang, D., Suhara, Y., Li, J., Hulsebos, M., Demiralp, C., & Tan,
         W.C. (2019). Sato: Contextual Semantic Type Detection in Tables. Proc.
-        VLDB Endow., 13, 1835-1848.
+        VLDB Endow., 13, 1835-1848. <br />
 
         <span id="toc20"></span>
 
-        [12] Brugman, S. pandas-profiling: Exploratory Data Analysis for Python. https://github.com/pandas-profiling/
+        [12] Brugman, S. pandas-profiling: Exploratory Data Analysis for Python. https://github.com/pandas-profiling/ <br />
 
         <span id="toc21"></span>
-        [13] Beltagy I, Peters ME, Cohan A. Longformer: The long-document transformer. arXiv preprint arXiv:2004.05150. 2020 Apr 10.
+        [13] Beltagy I, Peters ME, Cohan A. Longformer: The long-document transformer. arXiv preprint arXiv:2004.05150. 2020 Apr 10. <br />
 
         <span id="toc22"></span>
-        [14] Devlin J, Chang MW, Lee K, Toutanova K. Bert: Pre-training of deep bidirectional transformers for language understanding. arXiv preprint arXiv:1810.04805. 2018 Oct 11.
+        [14] Devlin J, Chang MW, Lee K, Toutanova K. Bert: Pre-training of deep bidirectional transformers for language understanding. arXiv preprint arXiv:1810.04805. 2018 Oct 11.<br />
         
         <span id="toc23"></span>
-        [15] Liu Y, Ott M, Goyal N, Du J, Joshi M, Chen D, Levy O, Lewis M, Zettlemoyer L, Stoyanov V. Roberta: A robustly optimized bert pretraining approach. arXiv preprint arXiv:1907.11692. 2019 Jul 26.
+        [15] Liu Y, Ott M, Goyal N, Du J, Joshi M, Chen D, Levy O, Lewis M, Zettlemoyer L, Stoyanov V. Roberta: A robustly optimized bert pretraining approach. arXiv preprint arXiv:1907.11692. 2019 Jul 26.<br />
 
       </p>
 
