--- a/submit/index.html
+++ b/submit/index.html
@@ -1672,12 +1672,158 @@
       </p>
       <p>
         <b>(i) Schema Type:</b>
+        <table class="tg">
+          <caption>Table X: Schema Type result for CTA & CPA</caption>
+          <thead>
+            <tr>
+              <th class="tg-ixdq" colspan="4">CTA</th>
+              <th class="tg-ixdq" colspan="4">CPA</th>
+          </tr>
+            <tr>
+                <th class="tg-ixdq" colspan="2">Top 5</th>
+                <th class="tg-ixdq" colspan="2">Lowest 5</th>
+                <th class="tg-ixdq" colspan="2">Top 5</th>
+                <th class="tg-ixdq" colspan="2">Lowest 5</th>
+            </tr>
+            <tr>
+              <th class="tg-mkpc">Label</th>
+              <th class="tg-mkpc">Overall F1</th>
+              <th class="tg-mkpc">Label</th>
+              <th class="tg-mkpc">Overall F1</th>
+              <th class="tg-mkpc">Label</th>
+              <th class="tg-mkpc">Overall F1</th>
+              <th class="tg-mkpc">Label</th>
+              <th class="tg-mkpc">Overall F1</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Recipe</td>
+              <td>96.23</td>
+              <td>Product</td>
+              <td>86.54</td>
+              <td>Restaurant</td>
+              <td>96.25</td>
+              <td>SportsEvent</td>
+              <td>84.50</td>
+            </tr>
+            <tr>
+              <td>Museum</td>
+              <td>95.40</td>
+              <td>Hotel</td>
+              <td>86.05</td>
+              <td>TVEpisode</td>
+              <td>96.08</td>
+              <td>Recipe</td>
+              <td>82.25</td>
+            </tr>
+            <tr>
+              <td>Event</td>
+              <td>93.89</td>
+              <td>JobPosting</td>
+              <td>84.14</td>
+              <td>MusicRecording</td>
+              <td>94.64</td>
+              <td>Person</td>
+              <td>81.24</td>
+            </tr>
+            <tr>
+              <td>Person</td>
+              <td>93.07</td>
+              <td>CreativeWork</td>
+              <td>82.50</td>
+              <td>Place</td>
+              <td>93.18</td>
+              <td>CreativeWork</td>
+              <td>76.36</td>
+            </tr>
+            <tr>
+              <td>MusicRecording</td>
+              <td>92.59</td>
+              <td>MusicAlbum</td>
+              <td>74.07</td>
+              <td>LocalBusiness</td>
+              <td>90.04</td>
+              <td>Product</td>
+              <td>70.34</td>
+            </tr>
+          </tbody>
+        </table>
       </p>
       <p>
         <b>(ii) Data Type:</b>
+        <table class="tg">
+          <caption>Table x: Data Type Results for CTA & CPA</caption>
+          <thead>
+            <tr>
+              <th></th>
+              <th class="tg-ixdq">CTA</th>
+              <th class="tg-ixdq">CPA</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="tg-lboi"> Boolean </td>
+              <td class="tg-lboi"><span style="font-weight:400;font-style:normal"></span>100</td>
+              <td class="tg-lboi"><span style="font-weight:400;font-style:normal"></span>85</td> 
+            </tr>
+            <tr>
+              <td class="tg-lboi"> Numeric </td>
+              <td class="tg-lboi"><span style="font-weight:400;font-style:normal"></span>91.77</td>
+              <td class="tg-lboi"><span style="font-weight:400;font-style:normal"></span>75.06</td>
+            </tr>
+            <tr>
+              <td class="tg-lboi"> Long Text </td>
+              <td class="tg-lboi"><span style="font-weight:400;font-style:normal"></span>86.92</td>
+              <td class="tg-lboi"><span style="font-weight:400;font-style:normal"></span>88.17</td>
+            </tr>
+            <tr>
+              <td class="tg-lboi"> Short Text </td>
+              <td class="tg-lboi"><span style="font-weight:400;font-style:normal"></span>90.27</td>
+              <td class="tg-lboi"><span style="font-weight:400;font-style:normal"></span>82.52</td>
+            </tr>
+            <tr>
+              <td class="tg-lboi"> URL </td>
+              <td class="tg-lboi"><span style="font-weight:400;font-style:normal"></span>97.06</td>
+              <td class="tg-lboi"><span style="font-weight:400;font-style:normal"></span>94.71</td>
+            </tr>
+          </tbody>
+        </table>
       </p>
       <p>
         <b>(ii) Specific Challenges:</b>
+        <table class="tg">
+          <caption>Table 4a: Specific Challenges Results for CTA & CPA</caption>
+          <thead>
+            <tr>
+              <th></th>
+              <th class="tg-ixdq">CTA</th>
+              <th class="tg-ixdq">CPA</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="tg-lboi"> Test (Missing Values) </td>
+              <td class="tg-lboi"><span style="font-weight:400;font-style:normal"></span>90.60</td>
+              <td class="tg-lboi"><span style="font-weight:400;font-style:normal"></span>82.74</td> 
+            </tr>
+            <tr>
+              <td class="tg-lboi"> Test (Format Heterogeneity) </td>
+              <td class="tg-lboi"><span style="font-weight:400;font-style:normal"></span>97.09</td>
+              <td class="tg-lboi"><span style="font-weight:400;font-style:normal"></span>86.55</td>
+            </tr>
+            <tr>
+              <td class="tg-lboi">Test (Corner Cases)</td>
+              <td class="tg-lboi"><span style="font-weight:400;font-style:normal"></span>85.06</td>
+              <td class="tg-lboi"><span style="font-weight:400;font-style:normal"></span>73.48</td>
+            </tr>
+            <tr>
+              <td class="tg-lboi">Test (Random Columns)</td>
+              <td class="tg-lboi"><span style="font-weight:400;font-style:normal"></span>90.89</td>
+              <td class="tg-lboi"><span style="font-weight:400;font-style:normal"></span>85.36</td>
+            </tr>
+          </tbody>
+        </table>
       </p>
       <p>
         Following the statistical analysis of our results, 
