adjust table format

--- a/submit/index.html
+++ b/submit/index.html
@@ -111,6 +111,10 @@
         padding: 10px 5px;
         word-break: normal;
       }
+      .tg tr th {
+        align-items: center;
+      }
+
       .tg {
         vertical-align: top;
       }
@@ -1434,65 +1438,41 @@
             </caption>
 
             <tr>
-              <th class="tg-9wq8">
-                <span
-                  style="
-                    font-weight: bold;
-                    font-style: normal;
-                    text-decoration: none;
-                    color: #000;
-                    background-color: transparent;
-                  "
-                  >CTA</span
-                >
-              </th>
-              <th class="tg-9wq8">
-                <span
-                  style="
-                    font-weight: bold;
-                    font-style: normal;
-                    text-decoration: none;
-                    color: #000;
-                    background-color: transparent;
-                  "
-                  >0.2</span
-                >
-              </th>
-              <th class="tg-9wq8">
-                <span
-                  style="
-                    font-weight: bold;
-                    font-style: normal;
-                    text-decoration: none;
-                    color: #000;
-                    background-color: transparent;
-                  "
-                  >0.5</span
-                >
-              </th>
-              <th class="tg-9wq8">
-                <span
-                  style="
-                    font-weight: bold;
-                    font-style: normal;
-                    text-decoration: none;
-                    color: #000;
-                    background-color: transparent;
-                  "
-                  >0.8</span
+              <th class="tg-mkpc"></th>
+              <th class="tg-mkpc" colspan="3">
+                <span style="background-color: #f0f0f0"
+                  >MainCol Percentage</span
                 >
               </th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td class="tg-9wq8">Single Column</td>
-              <td class="tg-9wq8">~</td>
-              <td class="tg-9wq8">82.97</td>
-              <td class="tg-9wq8">~</td>
+              <th class="tg-syo5">CTA</th>
+              <th class="tg-syo5">0.2</th>
+              <th class="tg-syo5">0.5</th>
+              <th class="tg-syo5">0.8</th>
             </tr>
             <tr>
-              <td class="tg-9wq8">DODUO*</td>
+              <td class="tg-9wq8">
+                <span style="color: #333; background-color: #fff"
+                  >Single Column</span
+                >
+              </td>
+              <td class="tg-9wq8">
+                <span style="color: #333; background-color: #fff">~</span>
+              </td>
+              <td class="tg-9wq8">
+                <span style="color: #333; background-color: #fff">82.97</span>
+              </td>
+              <td class="tg-9wq8">
+                <span style="color: #333; background-color: #fff">~</span>
+              </td>
+            </tr>
+            <tr>
+              <td class="tg-9wq8">
+                <span style="color: #333; background-color: #fff">DODUO*</span>
+              </td>
               <td class="tg-9wq8">
                 <span style="font-weight: 400; font-style: normal">~</span>
               </td>
@@ -1504,12 +1484,19 @@
               </td>
             </tr>
             <tr>
-              <td class="tg-9wq8">TURL*</td>
-              <td class="tg-9wq8">~</td>
-              <td class="tg-9wq8">78.96</td>
-              <td class="tg-9wq8">~</td>
+              <td class="tg-9wq8">
+                <span style="color: #333; background-color: #fff">TURL*</span>
+              </td>
+              <td class="tg-9wq8">
+                <span style="color: #333; background-color: #fff">~</span>
+              </td>
+              <td class="tg-9wq8">
+                <span style="color: #333; background-color: #fff">78.96</span>
+              </td>
+              <td class="tg-9wq8">
+                <span style="color: #333; background-color: #fff">~</span>
+              </td>
             </tr>
-
             <tr>
               <td class="tg-9wq8">
                 <span
@@ -1623,7 +1610,7 @@
                   >Neighbor</span
                 >
               </td>
-              <td class="tg-p91v">
+              <td class="tg-ri3a">
                 <span
                   style="
                     font-weight: 700;
@@ -1710,18 +1697,6 @@
                 >
               </td>
             </tr>
-            <!-- <tr>
-              <td class="tg-9wq8">DODUO*</td>
-              <td class="tg-vdld" colspan="3"><span style="font-weight:400;font-style:normal">84.82</span></td>
-            </tr>
-            <tr>
-              <td class="tg-9wq8">TURL*</td>
-              <td class="tg-9wq8" colspan="3">78.96</td>
-            </tr>
-            <tr>
-              <td class="tg-c3ow">Single Column</td>
-              <td class="tg-c3ow" colspan="3">82.97 </td>
-            </tr> -->
           </tbody>
         </table>
 
@@ -1731,13 +1706,21 @@
           </caption>
           <thead>
             <tr>
+              <th class="tg-mkpc"></th>
+              <th class="tg-mkpc" colspan="3">
+                <span style="background-color: #f0f0f0"
+                  >MainCol Percentage</span
+                >
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
               <th class="tg-syo5">CPA</th>
               <th class="tg-syo5">0.2</th>
               <th class="tg-syo5">0.5</th>
               <th class="tg-syo5">0.8</th>
             </tr>
-          </thead>
-          <tbody>
             <tr>
               <td class="tg-zkss">
                 <span
