--- a/submit/index.html
+++ b/submit/index.html
@@ -1420,13 +1420,13 @@
       <h2>6. Experimental Results and Error Analysis</h2>
 
       <span id="toc6.1"></span>
-      <h3>6.1 Results and Ablation Study</h3>
-      <p></p>
-      <div class="tg-wrap">
+      <h3>6.1 Main Results</h3>
+      <p>
+        <div class="tg-wrap">
         <table class="tg tg-top">
           <thead>
             <caption>
-              Table ?: CTA Experiment results
+              Table 1a: CTA Experiment results
             </caption>
 
             <tr>
@@ -1480,6 +1480,7 @@
               </th>
             </tr>
           </thead>
+          <tfoot><tr><td colspan="4">This is the footer and should span all columns.</td></tr></tfoot>
           <tbody>
             <tr>
               <td class="tg-9wq8">Single Column</td>
@@ -1705,6 +1706,11 @@
                   >85.82</span
                 >
               </td>
+              <tfoot>
+                  <tr>
+                      
+                  </tr>
+              </tfoot>
             </tr>
             <!-- <tr>
               <td class="tg-9wq8">DODUO*</td>
@@ -2049,180 +2055,15 @@
             </tr>
           </tbody>
         </table>
-      </div>
-      <div class="tg-wrap">
-        <table class="tg">
-          <caption>
-            Preprocess and Augmentation test
-          </caption>
-          <thead>
-            <tr>
-              <th class="tg-4akn">
-                <span
-                  style="
-                    font-weight: bold;
-                    font-style: normal;
-                    text-decoration: none;
-                    color: #000;
-                  "
-                  >Method</span
-                >
-              </th>
-              <th class="tg-4akn">
-                <span
-                  style="
-                    font-weight: bold;
-                    font-style: normal;
-                    text-decoration: none;
-                    color: #000;
-                  "
-                  >CTA with TaBERT</span
-                ><br /><span
-                  style="
-                    font-weight: bold;
-                    font-style: normal;
-                    text-decoration: none;
-                    color: #000;
-                  "
-                  >MainCol Percentage=0.5</span
-                >
-              </th>
-              <th class="tg-4akn">
-                <span
-                  style="
-                    font-weight: bold;
-                    font-style: normal;
-                    text-decoration: none;
-                    color: #000;
-                  "
-                >
-                  CPA with No-main Neighbor</span
-                ><br /><span
-                  style="
-                    font-weight: bold;
-                    font-style: normal;
-                    text-decoration: none;
-                    color: #000;
-                  "
-                  >MainCol Percentage=0.5</span
-                >
-              </th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td class="tg-zkss">
-                <span
-                  style="
-                    font-weight: 400;
-                    font-style: normal;
-                    text-decoration: none;
-                    color: #000;
-                    background-color: transparent;
-                  "
-                  >TUTA</span
-                >
-              </td>
-              <td class="tg-zkss">
-                <span
-                  style="
-                    font-weight: 400;
-                    font-style: normal;
-                    text-decoration: none;
-                    color: #000;
-                    background-color: transparent;
-                  "
-                  >92.45</span
-                >
-              </td>
-              <td class="tg-zkss">
-                <span
-                  style="
-                    font-weight: 400;
-                    font-style: normal;
-                    text-decoration: none;
-                    color: #000;
-                  "
-                  >85.77</span
-                >
-              </td>
-            </tr>
-            <tr>
-              <td class="tg-zkss">
-                <span
-                  style="
-                    font-weight: 400;
-                    font-style: normal;
-                    text-decoration: none;
-                    color: #000;
-                    background-color: transparent;
-                  "
-                  >MEAN</span
-                >
-              </td>
-              <td class="tg-zkss">
-                <span
-                  style="
-                    font-weight: 400;
-                    font-style: normal;
-                    text-decoration: none;
-                    color: #000;
-                    background-color: transparent;
-                  "
-                  >92.05</span
-                >
-              </td>
-              <td class="tg-zkss">
-                <span
-                  style="
-                    font-weight: 400;
-                    font-style: normal;
-                    text-decoration: none;
-                    color: #000;
-                  "
-                  >85.70</span
-                >
-              </td>
-            </tr>
-            <tr>
-              <td class="tg-zkss">
-                <span
-                  style="
-                    font-weight: 400;
-                    font-style: normal;
-                    text-decoration: none;
-                    color: #000;
-                    background-color: transparent;
-                  "
-                  >MEDIAN</span
-                >
-              </td>
-              <td class="tg-zkss">
-                <span
-                  style="
-                    font-weight: 400;
-                    font-style: normal;
-                    text-decoration: none;
-                    color: #000;
-                  "
-                  >92.24</span
-                >
-              </td>
-              <td class="tg-zkss">
-                <span
-                  style="
-                    font-weight: 400;
-                    font-style: normal;
-                    text-decoration: none;
-                    color: #000;
-                  "
-                  >85.68</span
-                >
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+        </div>
+      </p>
+      <p>
+        <b> SOTAB benchmark </b>
+      </p>
+        <b> Wikitables Dataset </b> 
+      <p>
+      </p>
+
 
       <p>
         # TODO To systematically evaluate our pre-trained framework ... we do
@@ -2234,8 +2075,187 @@
         >[<a href="#toc9">1</a>] and result of WikiTable from the studies by
         Suhara et al. [<a href="#toc15">7</a>]
       </p>
+
       <span id="toc6.2"></span>
-      <h3>6.2 Error Analysis</h3>
+      <h3>6.2 Ablation Study</h3>
+      <p>
+        <div class="tg-wrap">
+          <table class="tg">
+            <caption>
+              Preprocess and Augmentation test
+            </caption>
+            <thead>
+              <tr>
+                <th class="tg-4akn">
+                  <span
+                    style="
+                      font-weight: bold;
+                      font-style: normal;
+                      text-decoration: none;
+                      color: #000;
+                    "
+                    >Method</span
+                  >
+                </th>
+                <th class="tg-4akn">
+                  <span
+                    style="
+                      font-weight: bold;
+                      font-style: normal;
+                      text-decoration: none;
+                      color: #000;
+                    "
+                    >CTA with TaBERT</span
+                  ><br /><span
+                    style="
+                      font-weight: bold;
+                      font-style: normal;
+                      text-decoration: none;
+                      color: #000;
+                    "
+                    >MainCol Percentage=0.5</span
+                  >
+                </th>
+                <th class="tg-4akn">
+                  <span
+                    style="
+                      font-weight: bold;
+                      font-style: normal;
+                      text-decoration: none;
+                      color: #000;
+                    "
+                  >
+                    CPA with No-main Neighbor</span
+                  ><br /><span
+                    style="
+                      font-weight: bold;
+                      font-style: normal;
+                      text-decoration: none;
+                      color: #000;
+                    "
+                    >MainCol Percentage=0.5</span
+                  >
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="tg-zkss">
+                  <span
+                    style="
+                      font-weight: 400;
+                      font-style: normal;
+                      text-decoration: none;
+                      color: #000;
+                      background-color: transparent;
+                    "
+                    >TUTA</span
+                  >
+                </td>
+                <td class="tg-zkss">
+                  <span
+                    style="
+                      font-weight: 400;
+                      font-style: normal;
+                      text-decoration: none;
+                      color: #000;
+                      background-color: transparent;
+                    "
+                    >92.45</span
+                  >
+                </td>
+                <td class="tg-zkss">
+                  <span
+                    style="
+                      font-weight: 400;
+                      font-style: normal;
+                      text-decoration: none;
+                      color: #000;
+                    "
+                    >85.77</span
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td class="tg-zkss">
+                  <span
+                    style="
+                      font-weight: 400;
+                      font-style: normal;
+                      text-decoration: none;
+                      color: #000;
+                      background-color: transparent;
+                    "
+                    >MEAN</span
+                  >
+                </td>
+                <td class="tg-zkss">
+                  <span
+                    style="
+                      font-weight: 400;
+                      font-style: normal;
+                      text-decoration: none;
+                      color: #000;
+                      background-color: transparent;
+                    "
+                    >92.05</span
+                  >
+                </td>
+                <td class="tg-zkss">
+                  <span
+                    style="
+                      font-weight: 400;
+                      font-style: normal;
+                      text-decoration: none;
+                      color: #000;
+                    "
+                    >85.70</span
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td class="tg-zkss">
+                  <span
+                    style="
+                      font-weight: 400;
+                      font-style: normal;
+                      text-decoration: none;
+                      color: #000;
+                      background-color: transparent;
+                    "
+                    >MEDIAN</span
+                  >
+                </td>
+                <td class="tg-zkss">
+                  <span
+                    style="
+                      font-weight: 400;
+                      font-style: normal;
+                      text-decoration: none;
+                      color: #000;
+                    "
+                    >92.24</span
+                  >
+                </td>
+                <td class="tg-zkss">
+                  <span
+                    style="
+                      font-weight: 400;
+                      font-style: normal;
+                      text-decoration: none;
+                      color: #000;
+                    "
+                    >85.68</span
+                  >
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </p>
+
+      <span id="toc6.3"></span>
+      <h3>6.3 Error Analysis</h3>
       <p>
 
         To evaluate the performance of our best result from neighbor serialization with a window size of 2, 
