--- a/submit/index.html
+++ b/submit/index.html
@@ -1426,7 +1426,7 @@
       <span id="toc6.1"></span>
       <h3>6.1 Main Results</h3>
       <p>
-        <div class="tg-wrap">
+        <div style="text-align: center" class="tg-wrap">
           <table class="tg tg-top">
             <thead>
               <caption>
@@ -2047,16 +2047,26 @@
       </p>
 
       <p>
-        <div class="tg-wrap">
+        <div style="text-align: center" class="tg-wrap">
           <table class="tg">
+            <table class="tg">
             <caption>
-              Table? : CTA result of WikiTable
+              Table 2a: CTA result for WikiTable
             </caption>
             <thead>
               <tr>
-                <th class="tg-syo5"></th>
+                <th class="tg-5vuh"><br /></th>
                 <th class="tg-4akn">
-                  <span style="font-weight: 700">Test Micro F1</span>
+                  <span
+                    style="
+                      font-weight: 700;
+                      font-style: normal;
+                      text-decoration: none;
+                      color: #000;
+                      background-color: transparent;
+                    "
+                    >Test Micro F1</span
+                  >
                 </th>
               </tr>
             </thead>
@@ -2143,7 +2153,7 @@
           </table>
           <table class="tg">
             <caption>
-              Table? : CPA result of WikiTable
+              Table 2b: CPA result for WikiTable
             </caption>
             <thead>
               <tr>
@@ -2297,7 +2307,7 @@
           </table>
         </div>
       </p>
-      
+
       <p>
         <b> Wikitables Dataset </b> 
       </p>
