--- a/submit/index.html
+++ b/submit/index.html
@@ -3201,7 +3201,7 @@
       <h2>6. Discussion</h2>
       <p><b>WikiTable dataset</b></p>
       <p>
-        In <i>Table 1 and 2</i>, we can see that the best serialization differs
+        In <i>Tables 2.a and 2.b</i>, we can see that the best serialization differs
         between the SOTAB and WikiTable datasets. One possible reason for this
         difference is that the WikiTable dataset contains more tables with few
         columns, such as some tables that only have 2 columns. This could cause
@@ -3224,7 +3224,17 @@
       <span id="toc7"></span>
       <h2>7. Conclusion</h2>
 
-      <p></p>
+     <p>
+      To conclude our study, we found that the performance of our neighboring 
+      approach is limited by the context size and may not be as effective for 
+      tables with fewer columns. To address this limitation, future work could 
+      explore the use of LongFormer models to process longer text and potentially 
+      reduce the need for more columns in a horizontal direction. Additionally, 
+      we suggest investigating the use of contrastive learning to further enhance 
+      the performance on these tasks. With these future directions, we hope to continue 
+      improving table annotation and advancing the field towards more accurate and 
+      efficient models.
+     </p>
 
       <span id="toc8"></span>
       <h2>8. References</h2>
