Add conclusin, summerize the resutls

--- a/submit/index.html
+++ b/submit/index.html
@@ -3225,11 +3225,12 @@
       <h2>7. Conclusion</h2>
 
      <p>
-      To conclude our study, we found that the performance of our neighboring 
-      approach is limited by the context size and may not be as effective for 
-      tables with fewer columns. To address this limitation, future work could 
-      explore the use of LongFormer models to process longer text and potentially 
-      reduce the need for more columns in a horizontal direction. Additionally, 
+      To conclude our study, we have presented Neighboring, our proposed approach 
+      for table annotation in the context of CTA and CPA tasks.we found that the
+      performance of our neighboring approach is limited by the context size and 
+      may not be as effective for  tables with fewer columns. To address this limitation,
+      future work could explore the use of LongFormer model to process longer text and
+      potentially reduce the need for more columns in a horizontal direction. Additionally, 
       we suggest investigating the use of contrastive learning to further enhance 
       the performance on these tasks. With these future directions, we hope to continue 
       improving table annotation and advancing the field towards more accurate and 
